--- a/turtlebot_aruco_controller/CMakeLists.txt
+++ b/turtlebot_aruco_controller/CMakeLists.txt
@@ -1,26 +1,65 @@
 cmake_minimum_required(VERSION 3.8)
 project(turtlebot_aruco_controller)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+option(TAC_DEBUG "Enable or disable debug build" OFF)
+if (TAC_DEBUG)
+  set(_debug_definition "TAC_DEBUG")
+else()
+  set(_debug_definition "")
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+add_executable(main)
+target_link_libraries(main
+  PUBLIC
+    ${OpenCV_LIBRARIES}
+)
+ament_target_dependencies(main
+  PUBLIC
+    rclcpp rclcpp_lifecycle geometry_msgs
+)
+target_compile_definitions(main
+  PUBLIC
+    ${_debug_definition}
+)
+target_compile_options(main
+  PUBLIC
+    -Wall -Wextra -Wpedantic -Werror
+)
+
+add_executable(make-marker)
+target_link_libraries(make-marker
+  PUBLIC
+    ${OpenCV_LIBRARIES}
+)
+target_compile_options(make-marker
+  PUBLIC
+    -Wall -Wextra -Wpedantic -Werror
+)
+
+add_subdirectory(src)
+
+install(
+  TARGETS main make-marker
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY param
+  DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
